--- a/task_1/index.html
+++ b/task_1/index.html
@@ -7,15 +7,15 @@
 	</head>
 	<body>
 		<div class="grid-9">
-			<div></div>
-			<div></div>
-			<div></div>
-			<div></div>
-			<div></div>
-			<div></div>
-			<div></div>
-			<div></div>
-			<div></div>
+			<div><div></div></div>
+			<div><div></div></div>
+			<div><div></div></div>
+			<div><div></div></div>
+			<div><div></div></div>
+			<div><div></div></div>
+			<div><div></div></div>
+			<div><div></div></div>
+			<div><div></div></div>
 		</div>
 	</body>
 </html>
