--- a/div_square/index.html
+++ b/div_square/index.html
@@ -3,31 +3,12 @@
 	<head>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
-		<title>介绍页</title>
 		<link rel="stylesheet" type="text/css" href="css/comment.css"/>
+		<title>div等比例的正方形</title>
 	</head>
 	<body>
-
-		<div class="container">
-			<div class="go-back">
-				<img src="images/task3_01.png"/>
-			</div>
-			<div class="logo">
-				<img src="images/task3_02.png"/>
-			</div>
-			<div class="abstract">
-				<p>葡萄藤轻游戏专注于桌游领域，提供在线杀人游戏，捉鬼，炸狼堡等多种聚会游戏，以线下聚会桌游道具为主。</p>
-			</div>
-			<div class="bottom-functional-device">
-				<div class="left">
-					<div><img src="images/task3_03.png"/></div>
-					<p>22222222</p>
-				</div>
-				<div class="right">
-					<div><img src="images/task3_04.png"/></div>
-					<p>BJPTTeng</p>
-				</div>
-			</div>
-		</div>
+		<div class="container">ddd</div>
+		<div class="container1">sss</div>
+		<div class="container2">ddd</div>
 	</body>
 </html>
