--- a/task_4/index.html
+++ b/task_4/index.html
@@ -24,7 +24,7 @@
 			<!--<div class="form-login">-->
 				<button type="button" class="login-in">登录</button>
 			<!--</div>-->
-			<div class="forget-pwd">忘记密码？</div>
+			<a class="forget-pwd">忘记密码</a>
 		</div>
 	</body>
 </html>
