--- a/task_5/index.html
+++ b/task_5/index.html
@@ -11,5 +11,60 @@
 			<div class="left-text"><a href="#"><</a></div>
 			<div class="title">个人主页</div>
 		</div>
+		<div class="container container-footer">
+			<div class="scroll">
+				<div class="user-basic-info">
+					<div>
+						<div class="basic-left">
+							<img src="images/task5-1_01.png"/>
+						</div>
+						<div class="basic-right">
+							<div>
+								<div class="username text-16">高素雅</div>
+								<div class="age" style="margin-left: 0.1rem;">51岁</div>
+							</div>
+							<div>
+								<div class="address text-12">北京.通州.果园</div>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="user-detailed-info">
+					<div class="ul-header">专业技能</div>
+					<ul class="common-ul">
+						<li style="display: inline-flex;">
+							<div class="star-div">
+								住家
+							</div><div class="star-div">
+								不含餐
+							</div>
+						</li>
+						<li>
+							<div class="list-title">从业年限</div><div class="vertical-moulding"></div>
+							<div class="list-text">0~3年</div>
+						</li>
+						<li>
+							<div class="list-title">工作时间</div><div class="vertical-moulding"></div>
+							<div class="list-text">全天</div>
+						</li>
+						<li>
+							<div class="list-title">服务价格</div><div class="vertical-moulding"></div>
+							<div class="list-text text-danger">25元/小时</div>
+						</li>
+						<li>
+							<div class="list-title">自我介绍</div><div class="vertical-moulding"></div>
+							<div class="list-text">可以洗衣做饭照顾老人，可以洗衣做饭照顾老人，可以洗衣做饭照顾老人，可以洗衣做饭照顾老人，可以洗衣做饭照顾老人</div>
+						</li>
+						
+					</ul>
+				</div>
+			</div>
+		</div>
+		<div class="footer-fixed">
+			<button type="button" class="btn">留言
+			</button><button type="button" class="btn btn-primary">电话联系
+			</button>
+			
+		</div>
 	</body>
 </html>
