--- a/task_5/index.html
+++ b/task_5/index.html
@@ -24,7 +24,8 @@
 								<div class="age" style="margin-left: 0.1rem;">51岁</div>
 							</div>
 							<div>
-								<div class="address text-12">北京.通州.果园</div>
+								<img src="images/task5-1_03.png"/ style="width: 0.1rem;">
+								<div class="address text-12">北京&nbsp;&bull;&nbsp;通州&nbsp;&bull;&nbsp;果园</div>
 							</div>
 						</div>
 					</div>
