--- a/task_5/index.html
+++ b/task_5/index.html
@@ -41,19 +41,19 @@
 							</div>
 						</li>
 						<li>
-							<div class="list-title">从业年限</div><div class="vertical-moulding"></div>
+							<div class="list-title">从业年限</div>
 							<div class="list-text">0~3年</div>
 						</li>
 						<li>
-							<div class="list-title">工作时间</div><div class="vertical-moulding"></div>
+							<div class="list-title">工作时间</div>
 							<div class="list-text">全天</div>
 						</li>
 						<li>
-							<div class="list-title">服务价格</div><div class="vertical-moulding"></div>
+							<div class="list-title">服务价格</div>
 							<div class="list-text text-danger">25元/小时</div>
 						</li>
 						<li>
-							<div class="list-title">自我介绍</div><div class="vertical-moulding"></div>
+							<div class="list-title">自我介绍</div>
 							<div class="list-text">可以洗衣做饭照顾老人，可以洗衣做饭照顾老人，可以洗衣做饭照顾老人，可以洗衣做饭照顾老人，可以洗衣做饭照顾老人</div>
 						</li>
 						
