--- a/task_6/index.html
+++ b/task_6/index.html
@@ -3,13 +3,37 @@
 	<head>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
+		<!--<link href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css" rel="stylesheet">-->
 		<link rel="stylesheet" type="text/css" href="css/comment.css"/>
-		<title>个人主页</title>
+		<title>护工列表</title>
 	</head>
 	<body>
-		<header class="">
-			
+		<header class="header">
+
+			<div class="title">
+				<div class="btn-group">
+					<button type="button" class="btn">找雇主</button>
+					<button type="button" class="btn btn-active">找护工</button>
+				</div>
+			</div>
+			<a href="#" class="right-text"><i class="icon icon-position"></i></a>
 		</header>
+		<div class="container container-header">
+			<div class="select-group line">
+				<select name="location" class="col-4 ver-line-gradient">
+					<option value="所在地">所在地</option>
+				</select>
+				<select name="roomBoard" class="col-4 ver-line-gradient">
+					<option value="食宿">食宿</option>
+				</select>
+				<select name="condition" class="col-4 ver-line-gradient">
+					<option value="病人情况">病人情况</option>
+				</select>
+			</div>
+			<div class="ver-line-gradient">
+				dddd
+			</div>
+		</div>
 		<footer>
 			
 		</footer>
